Creacion de componente

--- a/views/registerCaficultor.html
+++ b/views/registerCaficultor.html
@@ -23,9 +23,9 @@
 
         <div class="inputs">
         <label for="document">Documento </label>
-        <input type="number" class="document" name="document"> <br></div>
+        <input type="text" class="document" name="document"> <br></div>
 
-<div class="inputs">
+        <div class="inputs">
         <label for="phoneNumber">Celular </label>
         <input type="tel" class="phoneNumber" name="phoneNumber"  pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
         required> <br> </div>
