Creacion de prmer componente

--- a/views/home.html
+++ b/views/home.html
@@ -26,7 +26,7 @@
         <div class="section-1">
             <img src="../public/images/farmer_2979790.svg" alt="caficultor">
             <div class="columna">
-            <a href="#">Registrar caficultor</a>
+            <a href="registerCaficultor.html">Registrar caficultor</a>
             </div>
         </div>
         <div class="section-1">
