se convierte la home page a elementos react

--- a/public/css/registerCaficultor.css
+++ b/public/css/registerCaficultor.css
@@ -4,6 +4,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
+
 input[type=number] { -moz-appearance:textfield; }
 
 main{
@@ -12,6 +13,12 @@ main{
     align-items: center;
     justify-content: center;
     width: 60vw;
+    height: 80vh;
+
+}
+
+form{
+    width: 100%;
 }
 
 label{
@@ -19,10 +26,13 @@ label{
 }
 header {
     display: flex;
+    height: 15vh;
     justify-content: center;
+    padding-bottom: 3%;
+    padding-top: 3%;
 }
 .unicauca{
-    height: 20vh;
+    height: 80%;
     padding-bottom: 4vh;
 }
 body{
@@ -38,7 +48,7 @@ body{
 
 
 .inputs{
-    width: 60vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding-bottom: 5vw;
@@ -51,7 +61,7 @@ body{
 
 .checkboxess{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
 }
 
@@ -68,3 +78,4 @@ body{
     border-radius: 10%;
     color:white;
 }
+
