--- a/views/registerCaficultor.html
+++ b/views/registerCaficultor.html
@@ -33,12 +33,12 @@
         
         <div class="inputs">
         <div class="checkboxess">
-            <div class="1">
+            <div class="primera">
             <input type="checkbox" name="yesWha">
             <label for="yesWha">Usa Whatsapp </label>
             </div>
 
-            <div class="2">
+            <div class="segunda">
             <input type="checkbox" name="noWha">
             <label for="noWha">Diferente Número de Whatsapp</label>
             </div>
@@ -68,10 +68,11 @@
         <input type="number" class="altura" name="altura"> <br>
 </div>
 
-        <div class="inputs"><select class="selectVariedad" name="selectVariedad">
-            <option class="seleccionMuni" disabled selected>Variedad</option>
-            <option class="seleccionMuni">**</option>
-        </select> 
+        <div class="inputs">
+            <select class="selectVariedad" name="selectVariedad">
+                <option class="seleccionMuni" disabled selected>Variedad</option>
+                <option class="seleccionMuni">**</option>
+            </select> 
     
         
         <input type="number" min= "1" placeholder="Número de arboles ">
