--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,122 @@
-.App {
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Titillium Web', sans-serif;
   text-align: center;
+  font-size: 16px;
 }
 
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a{
+  color: black;
+  font-weight: 600;
+  padding-bottom: 3%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100px;
+header {
+  display: flex;
+  justify-content: center;
+}
+
+.unicauca{
+  height: 20vh;
+  
+}
+
+main {
   display: flex;
   flex-direction: column;
+  height: 90vh;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+main img{
+  height: 8vh;
+  padding-bottom: 3%;
+}
+
+.section-1{
+  display: flex;
+  width: 80vw;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+footer {
+  background-color: #a5907e;
   color: white;
+  padding: 20px;
+  
+  bottom: 0;
+  width: 100%;
+  height:auto;
+  z-index: 2;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-links a {
+  color: white;
+  margin-right: 20px;
+  text-decoration: none;
+}
+
+.footer-social a {
+  color: white;
+  margin-right: 10px;
+  text-decoration: none;
+}
+
+.footer-social i {
+  font-size: 18px;
+}
+
+
+@media (min-width: 768px) {
+  *{
+      font-size: 25px;
   }
-  to {
-    transform: rotate(360deg);
+  main img{
+      height: 15vh;
+      padding-bottom: 0;
+      padding-right:3vw;
   }
+  
+  .section-1{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+  }
+  .columna{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 20vw;
+  }
+  a{
+      padding-bottom: 0;
+  }
+  header {
+      display: flex;
+      justify-content:center ;
+      
+  }
+  
+  .unicauca{
+      height: 20vh;
+      
+  }
+  
+  
 }
