--- a/src/App.css
+++ b/src/App.css
@@ -328,4 +328,16 @@ footer {
   font-size: 16px;
   margin: 5px;
   height: fit-content;
+  min-height: 20px;
+  min-width: 100px;
+  max-width: 200px;
+  max-height: 100px;
+}
+
+.intensityButton{
+  font-size: 16px;
+  border-radius: 0.5em;
+  width: 25px;
+  height: 25px;
+  margin: 3px;
 }
