--- a/src/App.css
+++ b/src/App.css
@@ -353,3 +353,28 @@ footer {
   height: 25px;
   margin: 3px;
 }
+
+/* Análisis Físico*/
+
+.LoteHeader{
+  font-size: 16px;
+  margin: 10px;
+  min-width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center !important;
+}
+.InputAnalisis{
+  margin: 5px;
+}
+.InputAnalisis label{
+  font-size: 16px;
+  border-radius: 0.2em;
+}
+.InputAnalisis input{
+  font-size: 16px;
+  border-radius: 0.5em;
+  width: 100px;
+  height: 25px;
+  border: 1px solid black;
+}
