--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 
 }
 
+
 h4{
   font-size: 16px;
 }
@@ -25,9 +26,10 @@ footer{
   height: 10vh;
 }
 a{
-  color: black;
+color: #000;
   font-weight: 600;
   padding-bottom: 3%;
+  text-decoration: none;
 }
 
 header {
@@ -47,11 +49,8 @@ header img{
 }
 
 main {
-  display: flex;
-  flex-direction: column;
+  height: 100vh;
   
-  justify-content: space-evenly;
-  align-items: center;
 }
 
 
@@ -68,6 +67,132 @@ main {
 .section-1 > img{
   width: 150px;
 
+}
+
+/* menu principal 2 */
+
+.nuevoAnalisis{
+  height: 100vh;
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: 80vw;
+  margin-left: 5vw;
+  text-align: right;
+  
+
+}
+.nuevoAnalisis > img{
+  height: 5rem;
+  padding-top: 1rem;
+}
+
+.nuevoAnalisis > p{  
+text-align: left !important;
+  font-size: 18px;
+}
+
+  .btn {
+    margin-top: 1rem;
+    display: inline-block;
+    width: 40%;
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 35px;
+    background-color: #9c0101;
+    color: rgb(156, 1, 1);
+    cursor: pointer;
+  }
+  
+  .btn:hover {
+    background-color: #d00030;
+  }
+  
+.nuevoAnalisis > h1{
+  padding-bottom: 1rem !important;
+text-align: left;
+}
+.quienesSomos{
+  padding-top: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.headerMP{
+  display: flex !important;
+  justify-content: space-between;
+  align-items: center;
+  width: 100vw;
+  height: 10vh;
+  background: #000;
+  
+}
+
+.headerMP >a{
+  color: white !important;
+  margin-right: .7rem;
+  text-decoration: underline;
+  font-size: 18px;
+
+
+}
+
+.headerMP > img{
+  margin-left: .7rem;
+  height: 2rem;
+}
+
+.imgFondoMP {
+  height: 100vh;
+  background-image: url(./assets/images/fondo.png);
+  background-size: cover;
+  background-attachment: fixed;
+  position: fixed;
+}
+
+.imgFondoMP > img{
+  height: 1rem;
+}
+.boxShadow{
+  background-color: rgba(255, 255, 255, 0.700);
+  height: 100vh;
+  
+}
+
+/* SOBRE NOSOTROS */
+.sobreNosotrosSection{
+  display: column;
+}
+.contentSobreNosotros{
+  display: flex;
+}
+.imgSobreNosotros{
+  display: flex;
+  flex-direction: column;
+  width: 50vw;
+  border-style: dotted;
+  height: 100vh;
+}
+.imgSobreNosotros > img{
+
+}
+.mision{
+  display: flex;
+  padding: .5rem;
+  flex-direction: column;
+  width: 50vw;
+  border-style: dotted;
+  height: 100vh;
+  
+}
+.mision >h1{
+  margin: 1rem 0 ;
+  text-align: left;
+}
+.mision >p{
+  text-align: left;
 }
 
 footer {
