--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,7 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-input[type="number"] {
-  -moz-appearance: textfield;
-}
+
 
 h4 {
   font-size: 16px;
@@ -170,8 +168,7 @@ main {
   border-style: dotted;
   height: 100vh;
 }
-.imgSobreNosotros > img {
-}
+
 .mision {
   display: flex;
   padding: 0.5rem;
@@ -228,7 +225,7 @@ footer {
 
 @media (min-width: 768px) {
   * {
-    font-size: 25px;
+    font-size: 16px;
   }
 
   .section-1 {
@@ -565,49 +562,59 @@ footer {
   flex-direction: column;
   align-items: center !important;
 }
+
+
+
+.col-3 {
+  justify-content: center;
+  background-color: #f5f5f5;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin: 5px;
+  width: auto;
+  min-width: 200px;
+}
+
+/* Estilos para los elementos InputAnalisis */
 .InputAnalisis {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 5px;
 }
 .InputAnalisis label {
-  display: inline;
+  
   font-size: 16px;
   border-radius: 0.2em;
+  margin-bottom: 5px;
 }
+
 .InputAnalisis input {
-  display: inline;
   font-size: 16px;
   border-radius: 0.5em;
   width: 100px;
   height: 25px;
   border: 1px solid black;
 }
-.inputInvalid label {
-  display: inline;
-  font-size: 16px;
-  border-radius: 0.2em;
+.InputAnalisis p {
   color: red;
+  margin-top: 5px;
+  display: none;
+}
+.inputValid{
+  margin: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .inputValid label {
-  display: inline;
+  display: block;
+  margin-bottom: 5px;
   font-size: 16px;
   border-radius: 0.2em;
   color: black;
 }
-.inputInvalid input {
-  display: inline;
-  font-size: 16px;
-  border-radius: 0.5em;
-  width: 100px;
-  height: 25px;
-  border: 1px solid red;
-}
-
-.inputInvalid p {
-  display: inline;
-  color: red !important;
-  font-size: 12px;
-}
-
 .inputValid input {
   font-size: 16px;
   border-radius: 0.5em;
@@ -620,55 +627,48 @@ footer {
   display: none;
   color: 1px solid red;
 }
-
-div.col-3 {
-  background-color: #f5f5f5;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  margin: 5px 5px 20px 5px;
+.inputInvalid label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 16px;
+  border-radius: 0.2em;
+  color: red;
+}
+.inputInvalid input {
+  display: inline;
+  font-size: 16px;
+  border-radius: 0.5em;
+  width: 100px;
+  height: 25px;
+  border: 1px solid red;
+}
+.inputInvalid p {
+  display: inline;
+  color: red !important;
+  font-size: 12px;
 }
 
-/* Estilos para los elementos InputAnalisis */
-
+/**/
 .inputs-analisis{
-  padding: 20px;
-  border: 1px solid #ccc;
-  background-color: #f7f7f7;
-  margin: 3rem;
-  width: 90%;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #cccccc;
+  background-color:  #f7f7f7;
+  margin: 10px;
+  padding: 2%;
+  border-radius: 10px;
 }
 .row {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.col-3 {
-  flex: 0 0 calc(25.33% - 10px);
-  margin-bottom: 10px;
-  justify-content: center;
-}
+
 
 /* Estilos para etiquetas y mensajes de error */
-.InputAnalisis label {
-  font-weight: bold;
-  display: block;
-  margin-bottom: 5px;
-}
-.inputInvalid label {
-  display: block;
-  font-weight: bold;
-}
-.inputValid label {
-  display: block;
-  font-weight: bold;
-}
-.InputAnalisis p {
-  color: red;
-  margin-top: 5px;
-  display: none;
-}
+
 
 /* Estilos para mensajes de error visibles */
 .InputAnalisis.error p {
@@ -728,13 +728,7 @@ p.valid-error {
   margin-top: 5px;
 }
 
-.inputValid{
-  height: 100%;
-}
 
-.input-group label{
-  margin: none  ;
-}
 
 .selectDefect{
   height: 100%;
@@ -752,15 +746,14 @@ button {
 
 }
 .agg {
-
   background-color: #007bff;
-  margin-left: 1rem;
-  height: 100%;
+  margin: 1rem;
+  width: fit-content;
+  height: fit-content;
 }
 
 table {
   /* Estilos para tablas */
-  width: 100%;
   border-collapse: collapse;
   border: 1px solid #000;
   margin-top: 20px;
@@ -775,63 +768,17 @@ table td {
   /* Estilos para celdas de tabla */
   padding: 5px;
   border: 1px solid #000;
+  width: fit-content;
 }
 
 .input-row {
   display: flex;
   align-items: center;
-  height: 6rem;
-  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-.input-group {
-  display: flex;
-  align-items: center;
-  margin-right: 10px; /* Espacio entre los grupos de elementos */
-  justify-content: space-around;
-}
-
-/* Estilos para el label */
-.input-group label {
-  font-weight: bold;
-  margin: auto; /* Espacio entre el label y el select/input */
-}
-
-/* Estilos para el select */
-.input-group select {
-  width: 100%;
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-/* Estilos para el input */
-.input-group input {
-  width: 100%;
-  padding: 15px 0;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-/* Estilos para el botón */
-.input-group button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  padding: 3px 4px;;
-}
-
-/* Estilos para el mensaje de error */
-.input-group p {
-  color: red;
-  font-size: 14px;
-  margin-top: 5px;
-}
-
-
-.h4-container {
+.resultados {
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   display: flex;
   flex-direction: column;
@@ -840,7 +787,7 @@ table td {
   flex-wrap: wrap;
   padding: 20px;
   border: 1px solid #ccc;
-  background-color: #D1CCDC; /* Cambiamos el color de fondo a un azul brillante */
+  background-color: #ded4c6; /* Cambiamos el color de fondo a un azul brillante */
   margin: 0 3rem 5rem 3rem;
   width: 90%;
   transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Agregamos una transición para el color de fondo y la sombra */
@@ -849,15 +796,14 @@ table td {
   font-weight: bold; /* Hacemos el texto en negrita */
 }
 
-.h4-container h4{
+.resultados h4{
   color: #000;
-    margin-bottom: .5rem;
-
-  
+  margin-bottom: .5rem;
+  font-weight: normal;
 }
 /* Estilos para el container cuando se hace hover */
-.h4-container:hover {
-  background-color: #B3AAC5; /* Cambia el color de fondo a un tono más oscuro al hacer hover */
+.resultados:hover {
+  background-color: #ded4c6; /* Cambia el color de fondo a un tono más oscuro al hacer hover */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Agregamos una sombra al hacer hover */
 }
 
@@ -985,9 +931,8 @@ table td {
 }
 
 .container-analisisf{
+  margin: 10%;
   display: flex !important;
   flex-direction: column;
   justify-content: center !important;
-  width: 80vw;
-  margin: auto !important;
 }
